--- a/pub.cabal
+++ b/pub.cabal
@@ -52,27 +52,27 @@ Executable pub
     time                      >= 1.4      && < 1.5,
     transformers              >= 0.4      && < 0.5
 
-Test-Suite tests
-  Type:                 exitcode-stdio-1.0
-  Default-Language:     Haskell2010
-  Hs-Source-Dirs:       test, src
-  Ghc-Options:          -Wall
-  Main-Is:              Test.hs
-  Other-Modules:        Pub.Internal
+-- Test-Suite tests
+--   Type:                 exitcode-stdio-1.0
+--   Default-Language:     Haskell2010
+--   Hs-Source-Dirs:       test, src
+--   Ghc-Options:          -Wall
+--   Main-Is:              Test.hs
+--   Other-Modules:        Pub.Internal
 
-  Build-Depends:
-    base                       >= 4.4      && < 5,
-    groom                      >= 0.1.2    && < 0.2,
-    cmdargs                    >= 0.10.7   && < 0.11,
-    hslogger                   >= 1.2.3    && < 1.3,
-    system-filepath            >= 0.4.12   && < 0.5,
-    bytestring                 >= 0.9.1    && < 0.11,
-    QuickCheck                 >= 2.6      && < 2.8,
-    HUnit                      >= 1.2.5.2  && < 1.3,
-    tasty                      >= 0.8      && < 0.9,
-    tasty-golden               >= 2.2.1    && < 2.3,
-    tasty-hunit                >= 0.8.0.1  && < 0.9,
-    tasty-quickcheck           >= 0.8      && < 0.9
+--   Build-Depends:
+--     base                       >= 4.4      && < 5,
+--     groom                      >= 0.1.2    && < 0.2,
+--     cmdargs                    >= 0.10.7   && < 0.11,
+--     hslogger                   >= 1.2.3    && < 1.3,
+--     system-filepath            >= 0.4.12   && < 0.5,
+--     bytestring                 >= 0.9.1    && < 0.11,
+--     QuickCheck                 >= 2.6      && < 2.8,
+--     HUnit                      >= 1.2.5.2  && < 1.3,
+--     tasty                      >= 0.8      && < 0.9,
+--     tasty-golden               >= 2.2.1    && < 2.3,
+--     tasty-hunit                >= 0.8.0.1  && < 0.9,
+--     tasty-quickcheck           >= 0.8      && < 0.9
 
 Source-Repository head
   Type:                 git
