--- a/pub.cabal
+++ b/pub.cabal
@@ -28,7 +28,7 @@ Data-Files:
 
 Executable pub
   Default-Language:     Haskell2010
-  HS-Source-Dirs:       src
+  HS-Source-Dirs:       pub
   GHC-Options:          -threaded -Wall -fwarn-tabs -funbox-strict-fields
                         -fno-warn-orphans -fno-warn-unused-do-bind -rtsopts -with-rtsopts=-N
   Main-Is:              Main.hs
@@ -47,6 +47,31 @@ Executable pub
     hedis                     >= 0.6      && < 0.7,
     pipes                     >= 4.1.1    && < 4.2,
     pipes-bytestring          >= 2        && < 3,
+    mtl                       >= 2.1      && < 2.3,
+    system-filepath           >= 0.4.12   && < 0.5,
+    groom                     >= 0.1.2    && < 0.2,
+    time                      >= 1.4      && < 1.5,
+    transformers              >= 0.4      && < 0.5
+
+Executable sub
+  Default-Language:     Haskell2010
+  HS-Source-Dirs:       sub
+  GHC-Options:          -threaded -Wall -fwarn-tabs -funbox-strict-fields
+                        -fno-warn-orphans -fno-warn-unused-do-bind -rtsopts -with-rtsopts=-N
+  Main-Is:              Main.hs
+  Other-Modules:        Sub.Internal
+
+  Build-Depends:
+    base                      >= 4        && < 5,
+    network                   >= 2.4.2.2  && < 2.5,
+    bytestring                >= 0.10.0.2 && < 0.10.1,
+    cmdargs                   >= 0.10.7   && < 0.11,
+    hslogger                  >= 1.2.3    && < 1.3,
+    ConfigFile                >= 1.1.1    && < 1.2,
+    text                      >= 1.1.0.1  && < 1.2,
+    safe                      >= 0.3      && < 0.4,
+    containers                >= 0.5.0.0  && < 0.6,
+    hedis                     >= 0.6      && < 0.7,
     mtl                       >= 2.1      && < 2.3,
     system-filepath           >= 0.4.12   && < 0.5,
     groom                     >= 0.1.2    && < 0.2,
