--- a/pub.cabal
+++ b/pub.cabal
@@ -29,83 +29,34 @@ Cabal-Version:          >= 1.10
 Build-Type:             Simple
 
 Data-Files:
-  Makefile
   LICENSE
-  README.org
+  README.md
 
 Executable pub
   Default-Language:     Haskell2010
   HS-Source-Dirs:       pub
-  GHC-Options:          -threaded -Wall -fwarn-tabs -funbox-strict-fields
-                        -fno-warn-orphans -fno-warn-unused-do-bind -rtsopts -with-rtsopts=-N
+  GHC-Options:          -threaded -Wall -rtsopts -with-rtsopts=-N
   Main-Is:              Main.hs
-  Other-Modules:        Pub.Internal
-
   Build-Depends:
-    base                      >= 4        && < 5,
-    network                   >= 2.4.2.2  && < 2.5,
-    bytestring                >= 0.10.0.2 && < 0.10.1,
-    cmdargs                   >= 0.10.7   && < 0.11,
-    hslogger                  >= 1.2.3    && < 1.3,
-    ConfigFile                >= 1.1.1    && < 1.2,
-    text                      >= 1.1.0.1  && < 1.2,
-    safe                      >= 0.3      && < 0.4,
-    containers                >= 0.5.0.0  && < 0.6,
-    hedis                     >= 0.6      && < 0.7,
-    pipes                     >= 4.1.1    && < 4.2,
-    pipes-bytestring          >= 2        && < 3,
-    mtl                       >= 2.1      && < 2.3,
-    system-filepath           >= 0.4.12   && < 0.5,
-    groom                     >= 0.1.2    && < 0.2,
-    time                      >= 1.4      && < 1.5,
-    transformers              >= 0.4      && < 0.5
+                base             >= 4.9      && < 5
+              , bytestring       >= 0.10.8.1 && < 0.11
+              , hedis            >= 0.9.5    && < 1.0
+              , optparse-generic >= 1.1.5    && < 2.0
+              , pipes            >= 4.1.9    && < 5.0
+              , pipes-bytestring >= 2.1.4    && < 3.0
+              , text             >= 1.2.2.1  && < 2.0
 
 Executable sub
   Default-Language:     Haskell2010
   HS-Source-Dirs:       sub
-  GHC-Options:          -threaded -Wall -fwarn-tabs -funbox-strict-fields
-                        -fno-warn-orphans -fno-warn-unused-do-bind -rtsopts -with-rtsopts=-N
+  GHC-Options:          -threaded -Wall -rtsopts -with-rtsopts=-N
   Main-Is:              Main.hs
-  Other-Modules:        Sub.Internal
-
   Build-Depends:
-    base                      >= 4        && < 5,
-    network                   >= 2.4.2.2  && < 2.5,
-    bytestring                >= 0.10.0.2 && < 0.10.1,
-    cmdargs                   >= 0.10.7   && < 0.11,
-    hslogger                  >= 1.2.3    && < 1.3,
-    ConfigFile                >= 1.1.1    && < 1.2,
-    text                      >= 1.1.0.1  && < 1.2,
-    safe                      >= 0.3      && < 0.4,
-    containers                >= 0.5.0.0  && < 0.6,
-    hedis                     >= 0.6      && < 0.7,
-    mtl                       >= 2.1      && < 2.3,
-    system-filepath           >= 0.4.12   && < 0.5,
-    groom                     >= 0.1.2    && < 0.2,
-    time                      >= 1.4      && < 1.5,
-    transformers              >= 0.4      && < 0.5
-
--- Test-Suite tests
---   Type:                 exitcode-stdio-1.0
---   Default-Language:     Haskell2010
---   Hs-Source-Dirs:       test, src
---   Ghc-Options:          -Wall
---   Main-Is:              Test.hs
---   Other-Modules:        Pub.Internal
-
---   Build-Depends:
---     base                       >= 4.4      && < 5,
---     groom                      >= 0.1.2    && < 0.2,
---     cmdargs                    >= 0.10.7   && < 0.11,
---     hslogger                   >= 1.2.3    && < 1.3,
---     system-filepath            >= 0.4.12   && < 0.5,
---     bytestring                 >= 0.9.1    && < 0.11,
---     QuickCheck                 >= 2.6      && < 2.8,
---     HUnit                      >= 1.2.5.2  && < 1.3,
---     tasty                      >= 0.8      && < 0.9,
---     tasty-golden               >= 2.2.1    && < 2.3,
---     tasty-hunit                >= 0.8.0.1  && < 0.9,
---     tasty-quickcheck           >= 0.8      && < 0.9
+                base             >= 4.9 && < 5
+              , bytestring       >= 0.10.8.1 && < 0.11
+              , hedis            >= 0.9.5    && < 1.0
+              , optparse-generic >= 1.1.5    && < 2.0
+              , text             >= 1.2.2.1  && < 2.0
 
 Source-Repository head
   Type:                 git
